--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p class="about-col-2-first-p"> Please, go through the following tab links to know more about my skills, <br/>experience and education.</p>
                     <div class="tab-titles">
                         <div class="tab-links active-link" onclick="opentab('skills')">Skills</div>
-                        <div class="tab-links " onclick="opentab('experience')"> Experience</div>
+                        <!-- <div class="tab-links " onclick="opentab('experience')"> Experience</div> -->
                         <div class="tab-links" onclick="opentab('education')">Education</div>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
@@ -58,7 +58,7 @@
                             <li>ExpressJs</li>
                         </ul>
                     </div>
-                   <div class="tab-contents tab-content-parent-div" id="experience">
+                   <!-- <div class="tab-contents tab-content-parent-div" id="experience">
                     <div class="tab-contents1 tab-content-child">
                         <h3>Web Development</h3>
                         <p>Tiapollo Technologies Pvt. Ltd., Virtual</p>
@@ -83,7 +83,7 @@
                            <li>Worked on APIs</li>
                         </ul>
                     </div>
-                   </div>
+                   </div> -->
                    <div class="tab-contents tab-contents-education" id="education">
                     
                         <h5>05/2012 - 05/2015,</h5>
